crates/vescpkg-rs/tests/ui/public_modules_are_shallow.stderr
error[E0603]: module `types` is private
 --> tests/ui/public_modules_are_shallow.rs:1:32
  |
1 | fn takes_config(_: vescpkg_rs::types::CustomConfigImage<2>) {}
  |                                ^^^^^ private module
  |
note: the module `types` is defined here
 --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:155:0
help: consider importing this struct instead
  |
1 - fn takes_config(_: vescpkg_rs::types::CustomConfigImage<2>) {}
1 + fn takes_config(_: vescpkg_rs::CustomConfigImage<2>) {}
  |

error[E0603]: module `types` is private
 --> tests/ui/public_modules_are_shallow.rs:4:30
  |
4 |     takes_config(vescpkg_rs::types::CustomConfigImage::new([0, 0]));
  |                              ^^^^^ private module
  |
note: the module `types` is defined here
 --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:155:0
help: consider importing this struct instead
  |
4 -     takes_config(vescpkg_rs::types::CustomConfigImage::new([0, 0]));
4 +     takes_config(vescpkg_rs::CustomConfigImage::new([0, 0]));
  |

error[E0603]: crate `units` is private
 --> tests/ui/public_modules_are_shallow.rs:5:31
  |
5 |     let _: Option<vescpkg_rs::units::Rpm> = None;
  |                               ^^^^^ private crate
  |
note: the crate `units` is defined here
 --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:81:4
help: consider importing one of these structs instead
  |
5 -     let _: Option<vescpkg_rs::units::Rpm> = None;
5 +     let _: Option<vescpkg_rs::Rpm> = None;
  |
5 -     let _: Option<vescpkg_rs::units::Rpm> = None;
5 +     let _: Option<vescpkg_rs_units::Rpm> = None;
  |
